# lab

./: .gitignore
Calc/: Calc.sln
Calc/Calc/: Form1.Designer.cs  Form1.cs  Program.cs
CsharpSmp/: CsharpSmp.sln
CsharpSmp/ConsoleApp1/: Program.cs
CsharpSmp/CsharpSmp/: CodeFile1.cs  Guifirst.cs  Program.cs
CsharpSmp/sampl12-5/: Program.cs  sampl12-5.csproj
CsharpSmp/sample1/: Program.cs
CsharpSmp/sample10--2/: Program.cs  (+1 more)
GirlFriend/: GirlFriend.sln
c_tool/: Makefile  bytes_read.c  grep.c  head.c  nancahtte_cat2.c  nancat3.c  nanchatte_cat.c  optcat.c  printf_test.c  stdio_wc-l.c  tail.c  wc-l.c
clang_pointa/: Makfile  add_func.c  add_func.s  alignment  alignment.c  array  array.c  array2  array2.c  assembly.c  assembly.s  auto  auto.c  board.c  buffer_overflow  buffer_overflow.c  byteorder  byteorder.c  func_ptr  func_ptr.c  get_word  get_word.c  get_xy  get_xy.c  get_xy_bad  get_xy_bad.c  main.c  nullsmp.c  output_argument  output_argument.c  pass_2d_array.c  pass_2d_array_c99.c  pass_array  pass_array.c  permutation  permutation.c  pointer  pointer.c  pointer_calc  pointer_calc.c  (+21 more)
copy_cmatrix/: Makefile  ccm.c
cpp_smp/: Makefile
ctf-practice/: caeser.go
laravel_test/: docker-compose.yml
nanchatte_string/: nan_string.c
oauth_sample/: get_calender.php  index.php  quick.html  quickstart.php
ps_tool/: cat_timer.ps1
rust_project/msRsut_smp/rusty-journal/: Cargo.toml
rust_project/msRsut_smp/rusty-journal/src/: cli.rs  main.rs  tasks.rs
tcp-ip-book/: addclient.py  addserver.py  echoserver.py  httpclient.py
tiro/: Makefile  tiro  tiro.c
(+818 files in other folders)
